test/modules/vass/multiply-defined-error-with-fn.good
multiply-defined-error-with-fn.chpl:18: error: symbol Barrier is multiply defined
multiply-defined-error-with-fn.chpl:24: note: also defined here
multiply-defined-error-with-fn.chpl:14: note: also defined as a function here (and possibly elsewhere)
